--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,112 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(./frames_key.css);
+:root {
+    --royal: rgb(0, 102, 255);
+    --bg-gg: rgb(0, 255, 149);
+    --dark: rgb(12, 13, 13);
+    --milk:rgb(221, 221, 221);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: camel;
+    src: url(./assets/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
+}
+
+body {
+    font-family: camel;
+    /* background: var(--dark);
+    color: var(--milk); */
+}
+.homeland{
+    max-height: 100vh;
+    overflow: hidden;
+}
+.banner_header h1 {
+    font-weight: 900;
+    font-size: 70px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: calc(1000px - 900px);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.banner_header .txt-grad {
+    font-size: 100 !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.txt-grad {
+    color: transparent;
+    background: linear-gradient(60deg, var(--bg-gg), var(--royal));
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+.mini-txt {
+    font-size: 20px;
+}
+
+.bubble-animated:nth-child(1) {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0px;
+    left: 0px;
+    color:white;
+    /* border-radius: 50%; */
+    background-color: var(--bg-gg);
+    background: linear-gradient(160deg, var(--bg-gg), var(--royal));
+    clip-path: circle( 5% at 100% 0%);
+    animation: glow 4000ms linear infinite;
+}
+.bubble-animated:nth-child(2) {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    left: -50px;
+    top: calc(100% - 5%);
+    border-radius: 50%;
+    background-color: var(--bg-gg);
+    background: linear-gradient(60deg, var(--bg-gg), var(--royal));
+    animation: glow2 3000ms linear infinite;
+}
+.bubble-animated > * {
+    min-width: 100vw;
+    position: absolute;
+}
+
+.primary{
+    padding: 15px;
+    background-color: var(--dark);
+    border-radius: 10px;
+    border:none;
+    margin: 10px;
+    text-decoration: none;
+    box-sizing: border-box;
+    color: white;
+    transition: 1s ease-in-out;
+    border: 5px solid gray;
+    animation: border-me 4s linear infinite;
+}
+.primary:hover{
+    padding: 15px;
+    background-color: var(--dark);
+    border-radius: 10px;
+    border:none;
+    margin: 10px;
+    text-decoration: none;
+    box-sizing: border-box;
+    color: rgb(133, 255, 204);
+    transition: 1s ease-in-out;
+    border: 5px solid gray;
+    animation: border-me 4s linear infinite;
+}
+.box_notify{
+    padding: 10px;
+    border-radius: 10px;
+    /* background-color: rgb(26, 25, 25); */
+}
+.box_notify > *{
+    animation: fadeIn 3s linear infinite;
 }
