--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -1,10 +1,74 @@
 .login {
-    min-height: 100vh;
-    width: 100%;
-    position: relative;
-}
-.login > *:nth-child(1){
+    min-height: 700px;
+    width: 80vw;
+    /* padding: 1px !important; */
+    position: absolute;
+    top: 50%;
+    border-radius: 10px;
+    overflow: hidden;
     background: linear-gradient(-50deg, var(--bg-gg), var(--royal));
-    height: 100vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.146);
+}
+.login >  * > *:nth-child(1){
+    /* background: linear-gradient(-50deg, var(--bg-gg), var(--royal)); */
+    height: 700px;
+    opacity: 40%;
     position: relative;
+    backdrop-filter: blur(20px);
+}
+.login >  * > *:nth-child(2){
+   background-color: rgb(255, 255, 255);
+   border-top-left-radius: 80px;
+   border-bottom-left-radius: 80px;
+   overflow: hidden;
+}
+.col-md-6.grid{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100 !important;
+    /* display: grid; */
+    text-align: center;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+.title{
+    text-transform: uppercase;
+    font-family: poppins;
+}
+.inputs {
+    display: grid;
+    /* width: 100%; */
+    /* background-color: red; */
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.inputs input[type='text'] {
+    padding: 20px;
+    width:  450px;
+    margin: 10px;
+    font-weight: 100;
+    background:none;
+    border-radius: 50px;
+    border: 1px solid rgb(60, 186, 64);
+}
+.login .col-md-6.grid > * {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    position: relative;
+    margin-top: 100px;
+}
+.link{
+    color:rgb(60, 186, 64);
+    text-decoration: none;
+}
+.text-bold{
+    font-weight: 500;
 }
