--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@
     src: url(./assets/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
 }
 
+@font-face {
+    font-family: poppins;
+    src: url(./assets/Poppins/Poppins-Regular.ttf);
+}
+
 body {
     font-family: camel;
     /* background: var(--dark);
