--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     --bg-gg: rgb(0, 255, 149);
     --dark: rgb(12, 13, 13);
     --milk:rgb(221, 221, 221);
+    --grr:rgb(60, 186, 64);
 }
 
 @font-face {
