--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -6,25 +6,25 @@
     top: 50%;
     border-radius: 10px;
     overflow: hidden;
-    background: linear-gradient(-50deg, var(--bg-gg), var(--royal));
+    /* background: linear-gradient(-50deg, var(--bg-gg), var(--royal)); */
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.146);
 }
-.login >  * > *:nth-child(1){
+.login >  * > * > *:nth-child(1){
     /* background: linear-gradient(-50deg, var(--bg-gg), var(--royal)); */
     height: 700px;
-    opacity: 40%;
+    opacity: 100%;
     position: relative;
-    backdrop-filter: blur(20px);
+    /* backdrop-filter: blur(20px); */
 }
-.login >  * > *:nth-child(2){
+.login >  * > * > *:nth-child(2){
    background-color: rgb(255, 255, 255);
    border-top-left-radius: 80px;
    border-bottom-left-radius: 80px;
    overflow: hidden;
 }
-.col-md-6.grid{
+.col-md-7.grid{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100 !important;
     /* display: grid; */
@@ -51,12 +51,13 @@
     padding: 20px;
     width:  450px;
     margin: 10px;
+    outline: none;
     font-weight: 100;
     background:none;
     border-radius: 50px;
-    border: 1px solid rgb(60, 186, 64);
+    border: 1px solid var(--grr);
 }
-.login .col-md-6.grid > * {
+.login .col-md-7.grid > * {
     display: grid;
     justify-items: center;
     align-items: center;
@@ -66,9 +67,39 @@
     margin-top: 100px;
 }
 .link{
-    color:rgb(60, 186, 64);
+    color:var(--grr);
     text-decoration: none;
 }
 .text-bold{
     font-weight: 500;
+}
+.icons{
+    display: flex;
+    gap: 10px;
+}
+.icons * {
+    border-radius: 50px;
+    font-size: large;
+    padding-bottom:10px;
+    padding: 10px;
+    background-color: var(--milk);
+    height: 40px;
+    transition: .3s ease-in-out;
+    width: 40px;
+}
+.icons *:hover {
+    border-radius: 50px;
+    font-size: large;
+    padding-bottom:10px;
+    padding: 10px;
+    background-color: var(--grr);
+    height: 40px;
+    color: var(--milk);
+    width: 40px;
+}
+.login > * {
+    animation: zoom-bg 15s linear infinite;
+}
+.blur{
+    backdrop-filter: blur(10px);
 }
