--- a/src/frames_key.css
+++ b/src/frames_key.css
@@ -51,3 +51,20 @@
         border: 5px solid gray;
     }
 }
+@keyframes zoom-bg {
+    0%{
+        background-size: 100%;
+    }2%{
+        background-size: 100%;
+    }40%{
+        background-size: 150%;
+    }60%{
+        background-size: 150%;
+    }
+    98%{
+       background-size: 100%;
+    }
+    100%{
+       background-size: 100%;
+    }
+}
