--- a/src/frames_key.css
+++ b/src/frames_key.css
@@ -68,3 +68,11 @@
        background-size: 100%;
     }
 }
+@keyframes rotate {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
