--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -11,20 +11,23 @@
     transform: translate(-50%, -50%);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.146);
 }
-.login >  * > * > *:nth-child(1){
+
+.login>*>*>*:nth-child(1) {
     /* background: linear-gradient(-50deg, var(--bg-gg), var(--royal)); */
     height: 700px;
     opacity: 100%;
     position: relative;
     /* backdrop-filter: blur(20px); */
 }
-.login >  * > * > *:nth-child(2){
-   background-color: rgb(255, 255, 255);
-   border-top-left-radius: 80px;
-   border-bottom-left-radius: 80px;
-   overflow: hidden;
+
+.login>*>*>*:nth-child(2) {
+    background-color: rgb(255, 255, 255);
+    border-top-left-radius: 80px;
+    border-bottom-left-radius: 80px;
+    overflow: hidden;
 }
-.col-md-7.grid{
+
+.col-md-7.grid {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100 !important;
     /* display: grid; */
@@ -34,10 +37,12 @@
     justify-content: center;
     padding: 10px;
 }
-.title{
+
+.title {
     text-transform: uppercase;
     font-family: poppins;
 }
+
 .inputs {
     display: grid;
     /* width: 100%; */
@@ -47,17 +52,21 @@
     text-align: center;
     justify-content: center;
 }
-.inputs input[type='text'] {
+
+.inputs input[type='text'],
+.inputs input[type='email'],
+.inputs input[type='password'] {
     padding: 20px;
-    width:  450px;
+    width: 450px;
     margin: 10px;
     outline: none;
     font-weight: 100;
-    background:none;
+    background: none;
     border-radius: 50px;
     border: 1px solid var(--grr);
 }
-.login .col-md-7.grid > * {
+
+.login .col-md-7.grid>* {
     display: grid;
     justify-items: center;
     align-items: center;
@@ -66,40 +75,49 @@
     position: relative;
     margin-top: 100px;
 }
-.link{
-    color:var(--grr);
+
+.link {
+    color: var(--grr);
     text-decoration: none;
+    cursor: pointer;
 }
-.text-bold{
+
+.text-bold {
     font-weight: 500;
 }
-.icons{
+
+.icons {
     display: flex;
     gap: 10px;
 }
+
 .icons * {
     border-radius: 50px;
     font-size: large;
-    padding-bottom:10px;
+    padding-bottom: 10px;
     padding: 10px;
     background-color: var(--milk);
     height: 40px;
     transition: .3s ease-in-out;
     width: 40px;
+    color: var(--dark);
 }
+
 .icons *:hover {
     border-radius: 50px;
     font-size: large;
-    padding-bottom:10px;
+    padding-bottom: 10px;
     padding: 10px;
     background-color: var(--grr);
     height: 40px;
     color: var(--milk);
     width: 40px;
 }
-.login > * {
+
+.login>* {
     animation: zoom-bg 15s linear infinite;
 }
-.blur{
+
+.blur {
     backdrop-filter: blur(10px);
 }
