--- a/src/components/Slugs/style.css
+++ b/src/components/Slugs/style.css
@@ -13,26 +13,37 @@
 .banner_.showcase-full .fill-shadow  {
     border-radius: 0px;
 }
-.incr_bx{
-    width: 150px;
-    background-color: var(--milk2);
+.m_location{
+    background-color: var(--wt);
+    /* height: 100px; */
+    border-bottom: 10px solid var(--dark);
+    width: 500px;
+    z-index: 3;
+    padding: 20px;
+    position: fixed;  
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.123);
+    border-radius: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: small;
+}
+.flex{
     display: flex;
     flex-direction: row;
-    gap:10px;
-    box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.214);
-    border-radius: 10px;
+    width: 100%;
+    position: relative;
 }
-.incr_bx > * {
+.m_location .close{
+    background-color: var(--dark);
     padding: 10px;
+    position: absolute;
+    color: var(--milk2);
+    width: 100px;
+    border-radius:30px;
     text-align: center;
-    width: 30%;
-}
-
-.incr_bx > *:nth-child(2) {
-    background-color: var(--wt);
-    width: 50%;
-    border-radius: 10px;
-}
-.btn{
-    min-width: 100px;
+    top: -20px;
+    border: 2px solid var(--wt);
+    left: 50%;
+    font-size: large;
+    font-weight: 900;
+    transform: translateX(-50%);
 }
