--- a/src/components/DashBoard/style.css
+++ b/src/components/DashBoard/style.css
@@ -1,4 +1,4 @@
-.banner_.showcase{
+.banner_.showcase {
     height: 400px;
     position: relative;
     background-color: var(--milk2);
@@ -6,26 +6,29 @@
     margin: 100px;
     padding-top: 10px;
 }
-.text-left{
+
+.text-left {
     text-align: end;
-    
+
 }
+
 /* .half{
     width: 400px;
     font-size: small;
     margin-left:100px;
 } */
-.grr{
+.grr {
     color: var(--hr-grr);
 }
-.comment{
-    font-size:large;
+
+.comment {
+    font-size: large;
     color: var(--gr);
 }
 
-.mini-filter{
+.mini-filter {
     text-transform: uppercase;
-    justify-self:center;
+    justify-self: center;
     left: 30%;
     box-sizing: border-box;
     margin-right: calc(1000px - 800px) !important;
@@ -37,40 +40,48 @@
     border-radius: 50px;
     overflow: hidden;
 }
-.mini-filter > * {
+
+.mini-filter>* {
     padding-top: 10px;
 }
-.mini-filter ul{
+
+.mini-filter ul {
     display: flex;
     width: 100%;
     position: relative;
 }
-.mini-filter ul > *{
+
+.mini-filter ul>* {
     display: flex;
     min-width: 100px;
     font-size: small;
     position: relative;
 }
-.bg-grr.col-2{
+
+.bg-grr.col-2 {
     border-radius: 50px;
     text-align: center;
     color: var(--wt);
     font-size: small;
     padding: 10px;
 }
-.align-end > *{
+
+.align-end>* {
     position: relative;
     justify-content: flex-end;
     /* background-color: red; */
 }
-.grid-flex{
+
+.grid-flex {
     display: flex;
     justify-content: center;
     gap: 20px;
 }
-.grid-flex{
+
+.grid-flex {
     flex-wrap: wrap;
 }
+
 .grid-flex .card {
     width: 180px;
     border-radius: 10px;
@@ -82,7 +93,8 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.096);
     height: 250px;
 }
-.grid-flex .card img{
+
+.grid-flex .card img {
     width: 100%;
     opacity: 60%;
     height: 100%;
@@ -90,29 +102,34 @@
     border: none;
     object-fit: cover;
 }
-.grid-flex .card-body{
+
+.grid-flex .card-body {
     position: absolute;
-    margin: 10px;   
+    margin: 10px;
     /* background: linear-gradient(60deg, var(--r-grr), var(--grr)); */
     background-color: var(--grr);
     border-radius: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
-    width:90%;
+    width: 90%;
     color: var(--wt);
     top: 90%;
     transform: translateY(-90%);
 }
-.small{
+
+.small {
     font-size: small;
 }
-.bold{
+
+.bold {
     font-weight: bold;
 }
-.label-title{
+
+.label-title {
     margin-left: 80px;
 }
-.fill-shadow{
+
+.fill-shadow {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -121,6 +138,157 @@
     padding: 10px;
     border-radius: 50px;
 }
-.banner_.showcase .fill-shadow .comment,.banner_.showcase-full .fill-shadow .comment{
+
+.banner_.showcase .fill-shadow .comment,
+.banner_.showcase-full .fill-shadow .comment {
     color: var(--milk);
+}
+
+@media screen and (max-width:1199px) {
+    .mini-filter {
+        text-transform: uppercase;
+        justify-self: center;
+        left: 30%;
+        box-sizing: border-box;
+        margin-right: calc(1000px - 800px) !important;
+        margin-left: calc(1000px - 700px) !important;
+        position: relative;
+        transform: translateX(-50%);
+        background-color: var(--wt);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.147);
+        border-radius: 50px;
+        overflow: hidden;
+    }
+
+    .mini-filter>* {
+        padding-top: 10px;
+    }
+
+    .mini-filter ul {
+        display: flex;
+        width: 100%;
+        position: relative;
+    }
+
+    .mini-filter ul>* {
+        display: flex;
+        min-width: auto;
+        margin-right: 10px;
+        font-size: small;
+        position: relative;
+    }
+
+    .bg-grr.col-2 {
+        /* border-radius: 50px; */
+        text-align: center;
+        color: var(--wt);
+        /* font-size: small; */
+        font-size: x-small;
+        min-width: 100%;
+        border-radius: 0px;
+        padding: 10px;
+    }
+
+.grid-flex .card {
+    width: 130px;
+    border-radius: 10px;
+    position: relative;
+    border: none;
+    border: none;
+    overflow: hidden;
+    background-color: rgba(60, 100, 186, 0.46);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.096);
+    height: 150px;
+}
+
+.grid-flex .card img {
+    width: 100%;
+    opacity: 60%;
+    height: 100%;
+    position: relative;
+    border: none;
+    object-fit: cover;
+}
+
+.grid-flex .card-body {
+    position: absolute;
+    margin: 10px;
+    /* background: linear-gradient(60deg, var(--r-grr), var(--grr)); */
+    background-color: var(--grr);
+    border-radius: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+    width: 85%;
+    font-size: small;
+    color: var(--wt);
+    top: 80%;
+    transform: translateY(-80%);
+}
+
+
+}
+@media screen and (max-width:992px) {
+    .mini-filter {
+        text-transform: uppercase;
+        justify-self: center;
+        left: -10%;
+        width: 70%;
+        box-sizing: border-box;
+        margin-right: calc(1000px - 800px) !important;
+        margin-left: calc(1000px - 700px) !important;
+        position: relative;
+        transform: translateX(-20%);
+        background-color: var(--wt);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.147);
+        border-radius: 50px;
+        overflow: hidden;
+    }
+}
+@media screen and (max-width:768px) {
+    .mini-filter {
+        text-transform: uppercase;
+        justify-self: center;
+        left: -20%;
+        width: 300px;
+        box-sizing: border-box;
+        margin-right: calc(1000px - 800px) !important;
+        margin-left: calc(1000px - 700px) !important;
+        position: relative;
+        transform: translateX(-30%);
+        background-color: var(--wt);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.147);
+        border-radius: 50px;
+        overflow: hidden;
+    }
+    .mini-filter ul>* {
+        display: flex;
+        min-width: auto;
+        margin-right: 10px;
+        font-size: xx-small;
+        position: relative;
+    }
+}
+@media screen and (max-width:500px) {
+    .mini-filter {
+        text-transform: uppercase;
+        justify-self: center;
+        left: 50%;
+        width: 300px;
+        box-sizing: border-box;
+        margin-right: calc(1000px - 1000px) !important;
+        margin-left: calc(1000px - 1000px) !important;
+        position: relative;
+        transform: translateX(-50%);
+        background-color: var(--wt);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.147);
+        border-radius: 50px;
+        overflow: hidden;
+    }
+    .mini-filter ul>* {
+        display: flex;
+        min-width: auto;
+        margin-right: 10px;
+        font-size: xx-small;
+        position: relative;
+    }
 }
