--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -3,6 +3,7 @@
     top: 3%;
     z-index: 3;
     left: 50%;
+    /* width: 100%; */
     transform: translate(-50%, -3%);
     padding-left: 10px;
     background-color: var(--wt);
@@ -10,6 +11,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.22);
     display: flex;
     flex-direction: row;
+    box-sizing: border-box;
 }
 .search input{
     position: relative;
@@ -28,4 +30,69 @@
     height: 40px;
     border-radius: 50px;
     margin: 10px;
+}
+@media screen and (max-width:1157px) {
+    
+.search input{
+    position: relative;
+    padding: 6px;
+    font-size: small;
+    border: none;
+    width: 300px;
+    outline: none;
+}
+.search button{
+    background-color: var(--grr);
+    border: none;
+    outline: none;
+    color: var(--wt);
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    margin: 10px;
+}
+
+}
+
+@media screen and (max-width:740px) {
+    .search input{
+        position: relative;
+        padding: 3px;
+        font-size: small;
+        border: none;
+        width: 200px;
+        outline: none;
+    }
+    .search button{
+        background-color: var(--grr);
+        border: none;
+        outline: none;
+        color: var(--wt);
+        width: 30px;
+        height: 30px;
+        border-radius: 50px;
+        margin: 10px;
+    }
+}
+
+@media screen and (max-width:519px) {
+    .search input{
+        position: relative;
+        padding: 3px;
+        font-size: x-small;
+        border: none;
+        width: 100px;
+        outline: none;
+    }
+    .search button{
+        background-color: var(--grr);
+        border: none;
+        outline: none;
+        color: var(--wt);
+        width: 20px;
+        font-size: x-small;
+        height: 20px;
+        border-radius: 50px;
+        margin: 10px;
+    }
 }
