--- a/src/components/Slugs/style.css
+++ b/src/components/Slugs/style.css
@@ -47,3 +47,38 @@
     font-weight: 900;
     transform: translateX(-50%);
 }
+@media  screen and (max-width:530px) {
+    
+.m_location{
+    background-color: var(--wt);
+    /* height: 100px; */
+    border-bottom: 10px solid var(--dark);
+    width: 310px;
+    z-index: 3;
+    padding: 20px;
+    position: fixed;  
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.123);
+    border-radius: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: small;
+}
+.m_location input{
+    padding: 15px !important;
+    margin: 5px !important;
+}
+.m_location .close{
+    background-color: var(--dark);
+    padding: 5px;
+    position: absolute;
+    color: var(--milk2);
+    width: 100px;
+    border-radius:30px;
+    text-align: center;
+    top: -20px;
+    border: 2px solid var(--wt);
+    left: 50%;
+    font-size: large;
+    font-weight: 900;
+    transform: translateX(-50%);
+}
+}
