--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,12 @@
 *{
     transition: .4s ease-in-out;
 }
-
+.root{
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
+}
 @font-face {
     font-family: camel;
     src: url(./assets/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
@@ -27,9 +32,10 @@
 
 body {
     font-family: camel;
-    /* position: relative;
-    width: 100%;*/
+    /* position: relative;*/
+    width: 100%;
     overflow-x: hidden;
+    /* position: relative; */
 
     /* background: var(--dark);
     color: var(--milk); */
@@ -37,12 +43,13 @@ body {
 .homeland{
     max-height: 100vh;
     overflow: hidden;
+    text-align: center !important;
 }
 .banner_header h1 {
     font-weight: 900;
     font-size: 70px;
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
     text-align: center;
     text-transform: uppercase;
     margin-top: calc(1000px - 900px);
@@ -93,7 +100,7 @@ body {
     border-radius: 50%;
     background-color: var(--bg-gg);
     background: linear-gradient(60deg, var(--bg-gg), var(--royal));
-    animation: glow2 3000ms linear infinite;
+    animation: glow2 8000ms linear infinite;
 }
 .bubble-animated > * {
     min-width: 100vw;
@@ -205,6 +212,9 @@ button{
 }
 .comment{
     font-size: small;
+}
+.fill-shadow h1{
+    font-size: 50px;
 }
 .banner_ .primary2{
     padding: 10px;
